head bang image has been added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to my site </h3>
 
 <h1> Very soon it will be updated nicely </h1>
+<img src="images/headbang.gif"> </img>
 
   
   </body>
