--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			.main-container {
 				width: 100%;
 				height: 100%;
-				background: #fff;
+				background: #afe;
 			}
 
 			canvas {
@@ -99,8 +99,27 @@
       <div class="inner">
 <div class="main-container">
 
+        <h1>Gaurav on github</h1>
+        <h2></h2>
+        <a href="https://github.com/igauravsehrawat" class="button"><small>Follow me on</small>GitHub</a>
+      </div>
+    </header>
 
-			<canvas></canvas>
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+        <section id="main-content">
+          <h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to my site </h3>
+
+<div id="updation">  Very soon it will be updated nicely.. </h1>
+	<div id="updation2">  the above line has been for months what is soon..a lightyear?? </h1>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
+
+			<canvas>
+
+			</canvas>
 
 		</div>
 
@@ -289,22 +308,6 @@
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
 		</script>
-        <h1>Gaurav on github</h1>
-        <h2></h2>
-        <a href="https://github.com/igauravsehrawat" class="button"><small>Follow me on</small>GitHub</a>
-      </div>
-    </header>
-
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to my site </h3>
-
-<div id="updation">  Very soon it will be updated nicely </h1>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-</div>
 
  
   </body>
