--- a/index.html
+++ b/index.html
@@ -8,49 +8,21 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-	<script> src="javascripts/three.min.js"></script>
+    <script src="javascript/chakra.js" > </script>
+	<script src="javascripts/three.min.js"></script>
 
-<script>
+	<!-- Bootstraping start --> 
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
-    var camera, scene, renderer;
-    var geometry, material, mesh;
+<!-- Optional theme -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 
-    init();
-    animate();
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
-    function init() {
+<!-- bootstraping -->
 
-        camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
-        camera.position.z = 1000;
-
-        scene = new THREE.Scene();
-
-        geometry = new THREE.CubeGeometry( 200, 200, 200 );
-        material = new THREE.MeshBasicMaterial( { color: 0xff0000, wireframe: true } );
-
-        mesh = new THREE.Mesh( geometry, material );
-        scene.add( mesh );
-
-        renderer = new THREE.CanvasRenderer();
-        renderer.setSize( window.innerWidth, window.innerHeight );
-
-        document.body.appendChild( renderer.domElement );
-
-    }
-
-    function animate() {
-
-        // note: three.js includes requestAnimationFrame shim
-        requestAnimationFrame( animate );
-
-        mesh.rotation.x += 0.01;
-        mesh.rotation.y += 0.02;
-
-        renderer.render( scene, camera );
-
-    }
-
-</script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -91,7 +63,7 @@
 		</style>
 
 
-    <title>Gaurav on Github</title>
+    <title>iGaurav</title>
   </head>
 
   <body>
@@ -99,8 +71,6 @@
       <div class="inner">
 <div class="main-container">
 
-        <h1>Gaurav on github</h1>
-        <h2></h2>
         <a href="https://github.com/igauravsehrawat" class="button"><small>Follow me on</small>GitHub</a>
       </div>
     </header>
@@ -109,206 +79,13 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to my site </h3>
-
-<div id="updation">  Very soon it will be updated nicely.. </h1>
-	<div id="updation2">  the above line has been for months what is soon..a lightyear?? </h1>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
 
-			<canvas>
-
-			</canvas>
 
 		</div>
 
-		<script>
-
-			/**
-			 * Hypnos by Hakim El Hattab (@hakimel, http://hakim.se)
-			 *
-			 * Inspired by http://patakk.tumblr.com/post/33304597365
-			 */
-			(function() {
-
-				var canvas = document.querySelector( 'canvas' ),
-					context = canvas.getContext( '2d' ),
-
-					width = window.innerWidth * 0.27,
-					height = window.innerHeight * 0.27,
-
-					radius = Math.min( width, height ) * 0.5,
-
-					// Number of layers
-					quality = 100,
-
-					// Layer instances
-					layers = [],
-
-					// Width/height of layers
-					layerSize = radius * 0.25,
-
-					// Layers that overlap to create the infinity illusion
-					layerOverlap = Math.round( quality * 0.1 );
-
-				function initialize() {
-
-					for( var i = 0; i < quality; i++ ) {
-						layers.push({
-							x: width/2 + Math.sin( i / quality * 2 * Math.PI ) * ( radius - layerSize ),
-							y: height/2 + Math.cos( i / quality * 2 * Math.PI ) * ( radius - layerSize ),
-							r: ( i / quality ) * Math.PI
-						});
-					}
-
-					resize();
-					update();
-
-				}
-
-				function resize() {
-
-					canvas.width = width;
-					canvas.height = height;
-
-				}
-
-				function update() {
-
-					requestAnimationFrame( update );
-
-					step();
-					clear();
-					paint();
-
-				}
-
-				// Takes a step in the simulation
-				function step () {
-
-					for( var i = 0, len = layers.length; i < len; i++ ) {
-
-						layers[i].r += 0.01;
-
-					}
-
-				}
-
-				// Clears the painting
-				function clear() {
-
-					context.clearRect( 0, 0, canvas.width, canvas.height );
-
-				}
-
-				// Paints the current state
-				function paint() {
-
-					// Number of layers in total
-					var layersLength = layers.length;
-
-					// Draw the overlap layers
-					for( var i = layersLength - layerOverlap, len = layersLength; i < len; i++ ) {
-
-						context.save();
-						context.globalCompositeOperation = 'destination-over';
-						paintLayer( layers[i] );
-						context.restore();
-
-					}
-
-					// Cut out the overflow layers using the first layer as a mask
-					context.save();
-					context.globalCompositeOperation = 'destination-in';
-					paintLayer( layers[0], true );
-					context.restore();
-
-					// // Draw the normal layers underneath the overlap
-					for( var i = 0, len = layersLength; i < len; i++ ) {
-
-						context.save();
-						context.globalCompositeOperation = 'destination-over';
-						paintLayer( layers[i] );
-						context.restore();
-
-					}
-
-				}
-
-				// Pains one layer
-				function paintLayer( layer, mask ) {
-					size = layerSize + ( mask ? 10 : 0 );
-					size2 = size / 2;
-
-					context.translate( layer.x, layer.y );
-					context.rotate( layer.r );
-
-					// No stroke if this is a mask
-					if( !mask ) {
-						context.strokeStyle = '#000';
-						context.lineWidth = 1;
-						context.strokeRect( -size2, -size2, size, size );
-					}
-
-					context.fillStyle = '#fff';
-					context.fillRect( -size2, -size2, size, size );
-
-				}
-
-				/**
-				 * rAF polyfill.
-				 */
-				(function() {
-					var lastTime = 0;
-					var vendors = ['ms', 'moz', 'webkit', 'o'];
-					for(var x = 0; x < vendors.length && !window.requestAnimationFrame; ++x) {
-						window.requestAnimationFrame = window[vendors[x]+'RequestAnimationFrame'];
-						window.cancelAnimationFrame = 
-						  window[vendors[x]+'CancelAnimationFrame'] || window[vendors[x]+'CancelRequestAnimationFrame'];
-					}
-
-					if (!window.requestAnimationFrame)
-						window.requestAnimationFrame = function(callback, element) {
-							var currTime = new Date().getTime();
-							var timeToCall = Math.max(0, 16 - (currTime - lastTime));
-							var id = window.setTimeout(function() { callback(currTime + timeToCall); }, 
-							  timeToCall);
-							lastTime = currTime + timeToCall;
-							return id;
-						};
-
-					if (!window.cancelAnimationFrame)
-						window.cancelAnimationFrame = function(id) {
-							clearTimeout(id);
-						};
-				}());
-
-				initialize();
-
-			})();
-
-
-		</script>
-
-		<script src="http://hakim.se/assets/promoter/promoter.js"></script>
-
-		<!-- Third party -->
-
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-		<script type="text/javascript">
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-15240703-1']);
-		_gaq.push(['_trackPageview']);
-
-		(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
-		</script>
 
  
   </body>
+  <footer > <canvas> </canvas> </footer>
 </html>
