--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     
     <script src="javascripts/chakra.js" > </script>
 	<script src="javascripts/three.min.js"></script>
+	<script type="text/javascript" src="javascripts/meny.min.js"></script>
+
+	<script type="text/javascript">
+
+	var meny = Meny.create({
+		menuElement: document.querySelector('.meny'),
+
+		contentsElement: document.querySelector('.contents'),
+
+		position: 'left',
+		height:200,
+		width: 260,
+
+		mouse: true,
+		touch: true
+	});
+
+
+
+	</script>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 	<!-- Bootstraping start --> 
@@ -68,9 +88,27 @@
   </head>
 
   <body>
+  	<div class="meny">
+<ul>
+	<li><a href="#"> About me</a> </li>
+	<li><a href="#"> My projects</a> </li>
+	<li><a href="#"> Github </a></li>
+	<li> <a href="#">Facebook </a></li>
+	<li> <a href="#">My blogs</a> </li>
+
+</ul>
+
+<div clas = "contents" >
+
+	<ul>
+		<li>About me</li>
+		<li>My Projects</li></ul>
+</div>
+  	</div>
     <header>
       <div class="inner">
 <div class="main-container">
+
 
         <a href="https://github.com/igauravsehrawat" class="button"><small>Follow me on</small>GitHub</a>
       </div>
