--- a/index.html
+++ b/index.html
@@ -9,26 +9,7 @@
     
     <script src="javascripts/chakra.js" > </script>
 	<script src="javascripts/three.min.js"></script>
-	<script type="text/javascript" src="javascripts/meny.min.js"></script>
-
-	<script type="text/javascript">
-
-	var meny = Meny.create({
-		menuElement: document.querySelector('.meny'),
-
-		contentsElement: document.querySelector('.contents'),
-
-		position: 'left',
-		height:200,
-		width: 260,
-
-		mouse: true,
-		touch: true
-	});
-
-
-
-	</script>
+	
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 	<!-- Bootstraping start --> 
@@ -47,6 +28,11 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+
+	
+
+
 <style>
 			* {
 				margin: 0;
@@ -88,6 +74,8 @@
   </head>
 
   <body>
+
+  	
   	<div class="meny">
 <ul>
 	<li><a href="#"> About me</a> </li>
@@ -97,34 +85,40 @@
 	<li> <a href="#">My blogs</a> </li>
 
 </ul>
-
-<div clas = "contents" >
+</div>
+<div class="menu-arrow"></div>
+<div class = "contents" >
 
 	<ul>
 		<li>About me</li>
-		<li>My Projects</li></ul>
+		<li>My Projects</li>
+	</ul>
 </div>
-  	</div>
+  	
     <header>
-      <div class="inner">
-<div class="main-container">
+     
 
 
-        <a href="https://github.com/igauravsehrawat" class="button"><small>Follow me on</small>GitHub</a>
-      </div>
-    </header>
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          <h3>
-</div>
+    <script type="text/javascript" src="javascripts/meny.min.js"></script>
+
+	<script type="text/javascript">
+
+	var meny = Meny.create({
+		menuElement: document.querySelector('.meny'),
+
+		contentsElement: document.querySelector('.contents'),
+
+		position: 'left',
+		height:200,
+		width: 260,
+
+		mouse: true,
+		touch: true
+	});
 
 
-		</div>
-
-
- 
+	</script> 
   </body>
   
 </html>
