--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@ margin:0;
 
 
   	<div class="meny">
-<ul>
-	<h1><li><a href="#"> About me</a> </li><h1>
+<ul> 
+	<h1><li><a href=about_me.html> About me</a> </li><h1>
 	<h1><li><a href="#"> My projects</a> </li></h1>
-	<h1><li><a href="#"> Github </a></li></h1>
-	<h1><li> <a href="#">Facebook </a></li></h1>
-	<h1><li> <a href="#">My blogs</a> </li></h1>
+	<h1><li><a href=http://www.github.com/igauravsehrawat> Github </a></li></h1>
+	<h1><li> <a href=http://www.fb.com/gaurav.sehrawat.jiit>Facebook </a></li></h1>
+	<h1><li> <a href=a_thought.html>A thought</a> </li></h1>
 
 </ul>
 </div>
