bootstrapping for personal website

--- a/index.html
+++ b/index.html
@@ -105,6 +105,28 @@ margin:0;
   <body>
 
 
+<nav class="navbar-default navbar-wrapper navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="http://github.com/igauravsehrawat">!Gaurav</a>
+		</div>
+
+		<div class="collapse navbar-collapse navbar-ex1-collapse ">
+			<div class="collapse navbar-collapse"> </div>
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#about"><span class="glyphicon glyphicon-home"></span>About me</a> </li>
+				<li><a href="#nothing_rightnow"><span class="glyphicon glyphicon-star"></span>Skills</a></li>
+				
+			</ul>
+
+			<div>
+
+
+
+	</div>
+
+</nav>
+
   	<div class="meny">
 <ul> 
 	<h1><li><a href=about_me.html> About me</a> </li><h1>
