jumbotron image size  specified

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
 <style type="text/css"> 
 
-	.container-fluid{
+	.jumbotron{
 		background-image: url(/images/G_with_G.jpg);
+		background-size: 100px 50px;
 	}
 			* {
 				margin: 0;
