bg size repeat fix

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
 	.jumbotron{
 		background-image: url(/images/G_with_G.jpg);
-		background-size: 100px 50px;
+		background-size: 100% 100px;
+		background-repeat: no-repeat;
 	}
 			* {
 				margin: 0;
