--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ margin:0;
 
 
 
-<nav class="navbar-default navbar-wrapper navbar-fixed-top" role="navigation">
+<!-- <nav class="navbar-default navbar-wrapper navbar-fixed-top" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="http://github.com/igauravsehrawat">!Gaurav</a>
@@ -146,7 +146,7 @@ margin:0;
 			<div>
 		</div>
 
-	</nav>
+	</nav> -->
 
 	<div class="container-fluid" >
 		<div class="jumbotron">
