--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	.jumbotron{
 		background-image: url(/images/G_with_G.jpg);
-		background-size: 100% 100px;
+		background-size: 100% 100%;
 		background-repeat: no-repeat;
 	}
 			* {
