--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	.jumbotron{
 		background-image: url(/images/G_with_G.jpg);
-		background-size: 100% 100%;
+		background-size: 100% 300px;
 		background-repeat: no-repeat;
 	}
 			* {
@@ -150,10 +150,9 @@ margin:0;
 
 	<div class="container-fluid" >
 		<div class="jumbotron">
-		<h1>Sitting on shoulders of Giant. </h1>
-			
-			
+		
 		</div>
+		<h1>Sitting on shoulders of Giant. </h1>
 	</div>
 	
 
