background image cover

--- a/index.html
+++ b/index.html
@@ -34,17 +34,21 @@
 
 <style type="text/css"> 
 
-	.jumbotron{
-		background-image: url(/images/G_with_G.jpg);
-		background-size: 100% 300px;
+	/*.jumbotron{
+		background-image: url(./images/G_with_G.jpg);
 		background-repeat: no-repeat;
+		-webkit-background-size: cover;
+  		-moz-background-size: cover;
+  		-o-background-size: cover;
+  		background-size: cover;
 	}
-			* {
+			*/* {
 				margin: 0;
 				padding: 0;
 			}
 
-			html,
+
+	
 body {
 	height: 100%;
 	overflow: hidden;
