--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			}
 
 
-	
+html,	
 body {
 	height: 100%;
 	overflow: hidden;
@@ -122,12 +122,12 @@ margin:0;
 
 
 
-<!-- <nav class="navbar-default navbar-wrapper navbar-fixed-top" role="navigation">
+<nav class="navbar-default navbar-wrapper navbar-fixed-top" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="http://github.com/igauravsehrawat">!Gaurav</a>
 		</div>
-
+<!-- 
 		<div class="collapse navbar-collapse navbar-ex1-collapse ">
 			<div class="collapse navbar-collapse"> </div>
 
@@ -148,9 +148,9 @@ margin:0;
 					<li ><a href="#move"></a><span class="glyphicon glyphicon-asterik"></span>nosterdam</li>
 				</ul>
 			<div>
-		</div>
+		</div> -->
 
-	</nav> -->
+	</nav> 
 
 	<div class="container-fluid" >
 		<div class="jumbotron">
