--- a/index.html
+++ b/index.html
@@ -127,12 +127,18 @@ margin:0;
 		<div class="navbar-header">
 			<a class="navbar-brand" href="http://github.com/igauravsehrawat">!Gaurav</a>
 		</div>
-<!-- 
+ 
 		<div class="collapse navbar-collapse navbar-ex1-collapse ">
 			<div class="collapse navbar-collapse"> </div>
 
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#about"><span class="glyphicon glyphicon-home"></span>About me</a> </li>
+					<li class="active"><a href="http://igauravsehrawat.github.io/blogs"><span class="glyphicon glyphicon-home"></span>Blogs</a> </li>
+
+				</div>
+			</div>
+
+
+					<!-- It is not ill structured just truncated
 					<li><a href="#nothing_rightnow"><span class="glyphicon glyphicon-star"></span>Skills</a></li>
 					<li class="dropdown">
 						<a href="#no_life" class="dropdown-toggle" data-toggle="dropdown">
